chore: refactor and doc fix
